--- a/WinSimulator/CTAC/index.html
+++ b/WinSimulator/CTAC/index.html
@@ -8,7 +8,8 @@
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe><iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe src="https://scratch.mit.edu/projects/563303853/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
