--- a/Giuliano/index.html
+++ b/Giuliano/index.html
@@ -56,19 +56,19 @@ function WriteRunInstructions()
 <BODY>
 <h1>Attendere prego...</h1>
 <p>Pubblicita</p>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
-<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="https://raw.githubusercontent.com/Vichingo455/vichingo455.github.io/gh-pages/Giuliano/preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
