Update and rename index.htm to vip-giveaway-won.htm

--- a/vBotOS/Turtle/vip-giveaway-won.htm
+++ b/vBotOS/Turtle/vip-giveaway-won.htm
@@ -1,60 +1,17 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
-<TITLE>ShortURL</TITLE>
-<META http-equiv=Content-Language content=en-us>
-<META http-equiv=Content-Type content="text/html; charset=windows-1252">
-<META content="Microsoft FrontPage 4.0" name=GENERATOR>
-<META content=FrontPage.Editor.Document name=ProgId>
-<META HTTP-EQUIV="Refresh" CONTENT="2; URL=http://localhost">
+<TITLE>VIP Giveaway won</TITLE>
 </HEAD>
-<script language=javascript>
-
-// Determine the browser version.
-
-ns = -1;
-ie = -1;
-var reqstring;
-
-if (navigator.appName.indexOf("Microsoft Internet Explorer") != -1) 
-{
-	if (parseFloat(navigator.appVersion) >= 4.0) 
-	{ 
-		ie = 1;
-	} 
-	else if (navigator.appVersion.indexOf("MSIE 3.02") != -1) 
-	{ 
-		ie = 1;
-	} 
-	else 
-	{ 
-		reqString = "^REQ_IE^"; 
-	}
-} 
-else 
-{ 
-	reqString = "Netscape Communicator 4.04 or Internet Explorer 3.02 or higher"; 
-}
-
-function WriteRunInstructions()
-{
-	if (ie == 1)
-	{
-		document.writeln("<p style=\"line-height: 100%\" >To download and <b> run this setup now</b>:");
-    	document.writeln("<ol>");
-		document.writeln("<li>");
-		document.writeln("<p style=\"line-height: 150%\" >In the File Download box, select <b>Run");
-		document.writeln("this program from its current location</b></li>");
-		document.writeln("<li>");
-		document.writeln("<p style=\"line-height: 150%\" >Upon download, the InstallShield Wizard will <b> guide you through the setup</b>.</li>");
-		document.writeln("</ol>");
-	}
-	// Don't mention the "Run" option if this is Netscape.
-}
-
-</script>
 <BODY>
-<h1>Wait...</h1>
+<h1>VIP Giveaway won</h1>
+	<p>AD</p>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfG2YhuqeDrtmFnHP2hOysu3QVGkw33TPA8XaqHc6cnged4Kg/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Caricamento…</iframe>
 <p>AD</p>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
