--- a/vBotOS/Turtle/vip-giveaway-won.htm
+++ b/vBotOS/Turtle/vip-giveaway-won.htm
@@ -11,6 +11,11 @@
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
+	<a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
 	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfG2YhuqeDrtmFnHP2hOysu3QVGkw33TPA8XaqHc6cnged4Kg/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Caricamento…</iframe>
 <p>AD</p>
 <a href="http://www.winrar.it" target="_blank"><img src="preleva_winrar.jpg" alt="Preleva WinRAR" width="177" height="66" border="0"></a>
