--- a/Tools/index.html
+++ b/Tools/index.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Vichingo455 Tools
+      </head>
+    <body>
+<h1 style="text-align: center;"><img src="https://github.com/Vichingo455/vichingo455.github.io/blob/gh-pages/Tools/Vichingo455.png?raw=true" alt="Vichingo455 Tools" width="128" height="128" /></h1>
+<h1 style="text-align: center;">Vichingo455 Tools</h1>
+<h3 style="text-align: center;">Free moderation and fun tool</h3>
+<p style="text-align: center;"><a title="Add to server" href="https://discord.com/oauth2/authorize?client_id=919980582077870151&amp;scope=applications.commands%20bot&amp;permissions=8"><img src="https://github.com/Vichingo455/vichingo455.github.io/blob/gh-pages/Tools/add-to-server.jpg?raw=true" alt="Add to server" width="335" height="42" /></a></p>
+<h2 style="text-align: center;">Why?</h2>
+<p style="text-align: center;">The bot is easy to use and needs no configuration,</p>
+<p style="text-align: center;">just add it to your server and you are done.</p>
+<p style="text-align: center;">The bot is online 24/7 to protect your server/s</p>
+<p style="text-align: center;">and for giving fun like searching videos, memes...</p>
+<h2 style="text-align: center;">Informations</h2>
+<table style="border-collapse: collapse; width: 97.0994%;" border="1">
+<tbody>
+<tr>
+<td style="width: 50%;"><strong>Prefix</strong></td>
+<td style="width: 50%;">/</td>
+</tr>
+<tr>
+<td style="width: 50%;"><strong>Name</strong></td>
+<td style="width: 50%;">Vichingo455 Tools#1510</td>
+</tr>
+<tr>
+<td style="width: 50%;"><strong>Authorizations needed</strong></td>
+<td style="width: 50%;">Administrator</td>
+</tr>
+<tr>
+<td style="width: 50%;"><strong>Moderation</strong></td>
+<td style="width: 50%;">Yes</td>
+</tr>
+<tr>
+<td style="width: 50%;"><strong>Fun</strong></td>
+<td style="width: 50%;">Yes</td>
+</tr>
+</tbody>
+</table>
+<h2 style="text-align: center;">Images</h2>
+<p style="text-align: center;"><img src="https://github.com/Vichingo455/vichingo455.github.io/blob/gh-pages/Tools/mod-help-1.jpg?raw=true" alt="" /></p>
+    </body>
+    </html>
