--- a/Tools/index.html
+++ b/Tools/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vichingo455 Tools
+    <title>Vichingo455 Tools</title>
       </head>
     <body>
 <h1 style="text-align: center;"><img src="https://github.com/Vichingo455/vichingo455.github.io/blob/gh-pages/Tools/Vichingo455.png?raw=true" alt="Vichingo455 Tools" width="128" height="128" /></h1>
