--- a/Tools/index.html
+++ b/Tools/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="5; URL=https://vichingo455-tools.freesite.host" />
-    <title>301 Redirect</title>
+    <title>Vichingo455 Tools</title>
       </head>
     <body>
+      <h1>Site has moved</h1>
+      <p>The new site has better design and more features.</p>
+      <p>Redirecting...</p>
     </body>
     </html>
