--- a/Tools/index.html
+++ b/Tools/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="5; URL=https://vichingo455-tools.freesite.host" />
+    <meta http-equiv="refresh" content="5; URL=https://discord.com/oauth2/authorize?client_id=919980582077870151&scope=applications.commands%20bot&permissions=8" />
     <title>Vichingo455 Tools</title>
       </head>
     <body>
